--- a/src/index.css
+++ b/src/index.css
@@ -58,6 +58,7 @@ button:focus-visible {
     outline: 4px auto -webkit-focus-ring-color;
 }
 
-input[type="text"], textarea {
+input, textarea {
     background-color: white;
+    font-family: Inter, system-ui, Avenir, Helvetica, Arial, sans-serif;
 }
